tests/transpiler/x/java/group_by_join.error
exit status 1
Main.java:35: error: <identifier> expected
         c;
          ^
Main.java:36: error: <identifier> expected
        Item3(Data2 o,  c) {
                         ^
2 errors
